# Taller-PROGRA3

./: CMakeLists.txt  ChangeString.c  ChangeString.h  Programa.c  Programa.h  Punto1_5.c  Punto1_5.h  README.md  function.c  function.h  logica.c  logica.h  main.c  ui.c  ui.h
Taller/: CMakeLists.txt  Programa.c  Programa.h  main.c
