cmake_minimum_required(VERSION 3.27)
project(Taller_PROGRA3 C)

set(CMAKE_C_STANDARD 11)

add_executable(Taller_PROGRA3 main.c
        logica.c
        logica.h
        ui.c
        ui.h
        Punto1_5.c
        Punto1_5.h
        Punto1_5.h
        Punto1_5.h
        Punto1_5.h
        function.c
        function.h
        ChangeString.c
        ChangeString.h
)
